# ESP32S3-BLE-Keyboard-Mouse

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old  test_parser.py
main/: CMakeLists.txt  Kconfig.projbuild  esp_hidd_prf_api.c  hid_dev.c  hid_dev.h  hid_device_le_prf.c  hid_device_type_detector.c  hid_device_type_detector.h  hid_host_example.c  hid_host_example.h  hid_report_parser.c  hid_report_parser.h  hid_report_parser_c.h  hid_report_parser_debug.c  hidd_le_prf_int.h  idf_component.yml  led_control.c  led_control.h  mouse_accumulator.c  mouse_accumulator.h
